templates/opa_template.yaml
---
# Source: opa/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: release-name-opa
  labels:
    app: release-name-opa
    chart: "opa-1.4.2"
    release: "release-name"
    heritage: "Helm"
spec:
  selector:
    app: release-name-opa
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
# Source: opa/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-opa
  labels:
    app: release-name-opa
    chart: "opa-1.4.2"
    release: "release-name"
    heritage: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-opa
  template:
    metadata:
      labels:
        app: release-name-opa
      name: release-name-opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:0.10.7
          imagePullPolicy: IfNotPresent
          resources:
            {}
          args:
            - "run"
            - "--server"
            - "--config-file=/config/config.yaml"
            - "--tls-cert-file=/certs/tls.crt"
            - "--tls-private-key-file=/certs/tls.key"
            - "--addr=0.0.0.0:443"
            - "--log-level=info"
            - "--log-format=text"
            - "--authentication=token"
            - "--authorization=basic"
            - "/authz/authz.rego"
            - "--ignore=.*"
            - "--insecure-addr=127.0.0.1:8181"
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /certs
            - name: config
              readOnly: true
              mountPath: /config
            - name: authz
              readOnly: true
              mountPath: /authz
        - name: mgmt
          image: openpolicyagent/kube-mgmt:0.8
          imagePullPolicy: IfNotPresent
          resources:
            {}
          args:
            - --opa-auth-token-file=/authz/mgmt-token
            - --opa-url=http://127.0.0.1:8181/v1
            - --replicate-path=kubernetes
            - --enable-policies=false
          volumeMounts:
            - name: authz
              readOnly: true
              mountPath: /authz
          readinessProbe:
            httpGet:
              initialDelaySeconds: 3
              path: /
              periodSeconds: 5
              port: 443
              scheme: HTTPS
          livenessProbe:
            httpGet:
              initialDelaySeconds: 3
              path: /
              periodSeconds: 5
              port: 443
              scheme: HTTPS
      serviceAccountName: release-name-opa
      volumes:
        - name: certs
          secret:
            secretName: release-name-opa-cert
        - name: config
          secret:
            secretName: release-name-opa-config
        - name: authz
          emptyDir: {}
      nodeSelector:
        {}
      tolerations:
        []
---
# Source: opa/templates/webhookconfiguration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: release-name-opa
  annotations:
  labels:
    app: release-name-opa
    chart: "opa-1.4.2"
    release: "release-name"
    heritage: "Helm"
webhooks:
  - name: webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
        - {key: openpolicyagent.org/webhook, operator: NotIn, values: [ignore]}
    failurePolicy: Ignore
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - '*'
        resources:
        - '*'
    clientConfig:


      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJakNDQWdxZ0F3SUJBZ0lSQU1nNEdDa1hMMHpHejBnZ1dHYXdVMnN3RFFZSktvWklodmNOQVFFTEJRQXcKR3pFWk1CY0dBMVVFQXhNUWIzQmhMV0ZrYldsemMybHZiaTFqWVRBZUZ3MHlOREExTVRVeE1EVXhNRFZhRncwegpOREExTVRNeE1EVXhNRFZhTUJzeEdUQVhCZ05WQkFNVEVHOXdZUzFoWkcxcGMzTnBiMjR0WTJFd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFETGN5cG11eXlEU2VHSHN5T25PMWVsVlpvMlREZGoKVDJEQjFaamE4Wk9tNFFYMVUwUk54bnNkSkFkNm01cWlQZ3phM1lhSGwyYlh2RFl1MFQzbmhlbVAyc1dBUDh4OQpPYldlWXpjbUFL [...]


      service:
        name: release-name-opa
        namespace: default
